@@ -1,3 +1,8 @@
+2005-04-09 10:23  antirez
+
+	* ChangeLog, TODO, jim.c: TODO updated, spurious free changed into
+	  Jim_Free().
+
 2005-04-08 16:07  patthoyts
 
 	* jim-win32.c: Do not add cursorinfo if build target cannot cope.
